# blazingsun-rust-api

./: .env  Cargo.toml  LICENSE  README.md
src/: handlers.rs  main.rs  models.rs  schema.rs
templates/: error.html  index.html  upload.html  user.html
