[package]
name = "rust-api-auth-async"
version = "0.1.0"
authors = ["Milorad Djukovic <donmilorad87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0" 
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.8"
diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.5"
r2d2 = "0.8.8"
serde = "1.0.112"
serde_derive = "1.0.112"
serde_json = "1.0.55"
actix-service = "1.0.5"
alcoholic_jwt = "1.0.0"
reqwest = "0.10.6"
actix-rt = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
tera = "1.3.1"
env_logger = "0.7.1"
actix-http = "1.0.1"
actix-cors = "0.2.0"
google-authenticator = "0.1.9"